--- a/Random Problems/.vscode/settings.json
+++ b/Random Problems/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "valarray": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "ostream": "cpp",
+        "cmath": "cpp",
+        "iomanip": "cpp"
     }
 }
